feat(parser): Add optional SIMD string scanning via Vector API
Add VectorScan for faster string parsing using jdk.incubator.vector.
SWAR remains default; opt-in to new code path with :vector alias.
JsonParser detects module at runtime and switches when available.