@@ -5,7 +5,7 @@
   (b/javac {:src-dirs ["java"]
             :class-dir "classes"
             :basis (b/create-basis {:project "deps.edn"})
-            :javac-opts ["--release" "25"]}))
+            :javac-opts ["--release" "25" "--add-modules" "jdk.incubator.vector"]}))
 
 (defn clean [_]
   (b/delete {:path "classes"}))
